--- a/pic-api/src/main/resources/application-domain.yaml
+++ b/pic-api/src/main/resources/application-domain.yaml
@@ -12,3 +12,8 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      database: 0
