fix: Fix broken workflow

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -5,6 +5,9 @@ on:
       - main
       - develop
 
+env:
+  JASYPT_ENCRYPTOR_PASSWORD: ${{ secrets.JASYPT_ENCRYPTOR_PASSWORD }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
