chore: Reformat code

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ mysqlConnectorVersion=8.0.33
 kotlin.code.style=official
 springDocOpenApiVersion=2.0.2
 jasyptVersion=3.0.5
-dataBindVersion=2.13.4.1
+jacksonAnnotationVersion=2.13.4
