wip: presigned url

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ kotlin.code.style=official
 springDocOpenApiVersion=2.0.2
 jasyptVersion=3.0.5
 jacksonAnnotationVersion=2.13.4
+awsVersion=2.2.6.RELEASE
