--- a/.editorconfig
+++ b/.editorconfig
@@ -8,10 +8,12 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.gradle.kts,*.kt,*.kts,*.main.kts}]
-ij_kotlin_allow_trailing_comma = true
+[{*.kt,*.kts}]
+ij_kotlin_allow_trailing_comma = false
+ij_kotlin_allow_trailing_comma_on_call_site = false
 ij_kotlin_name_count_to_use_star_import = 2147483647
 ij_kotlin_name_count_to_use_star_import_for_members = 2147483647
+ktlint_standard_filename = disabled
 
 [*.md]
 trim_trailing_whitespace = false
