--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ kotlin.code.style=official
 springDocOpenApiVersion=2.0.2
 jasyptVersion=3.0.5
 jacksonAnnotationVersion=2.13.4
+### firebase version
+firebaseVersion=9.2.0
